--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -8,25 +8,24 @@
 			<h3>All listings!</h3>
 		</div>
 	</div>
-	<!--End of page header-->
-
-		<!--Experimental Bootstrap Table-->
-		<table class="table table-hover">
-			<thead class="thead-dark pb-2 center">
-				<tr>
-					<th scope="col"></th>
-                    <th scope="col">Card</th>
-					<th scope="col">Vendor Name</th>
-					<th scope="col">Condition</th>
-					<th scope="col">Price</th>
+<!--End of page header-->
+<!--Bootstrap Table-->
+	<table class="table table-hover">
+		<thead class="thead-dark pb-2 center">
+			<tr>
+				<th scope="col"></th>
+                <th scope="col">Card</th>
+				<th scope="col">Vendor Name</th>
+				<th scope="col">Condition</th>
+				<th scope="col">Price</th>
+                <th scope="col"></th>
+                {% if user.is_authenticated %}
                     <th scope="col"></th>
-                    {% if user.is_authenticated %}
-                    <th scope="col"></th>
-                    {% endif %}
-				</tr>
-			</thead>
-			<tbody>
-				{% for card in cards %}
+                {% endif %}
+			</tr>
+		</thead>
+		<tbody>
+			{% for card in cards %}
 				<tr class="center">
 					<td>
 						<div onmouseenter="imageToggleShow({{ card.id }})" onmouseleave="imageToggleHide({{ card.id }})">
@@ -37,7 +36,7 @@
                         {% endif %}
                     </td>
 					<td>{{ card.card_title }}</td>
-					<td><a href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a></td>
+					<td><a class="underline-link" href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a></td>
                     <td>{{ card.card_condition }}</td>
 					<td>£{{ card.card_price }}</td>
                     <td><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak">View Listing</a></td>
@@ -57,16 +56,15 @@
                     </td>
                     {% endif %}
 				</tr>
-				{% endfor %}
+			{% endfor %}
 			</tbody>
 		</table>
 
-		<!--End of Experimental Bootstrap Table-->
+<!--End of Bootstrap Table-->
+</div>
+{% endblock %}
 
-	</div>
-	{% endblock %}
 
-
-	{% block end_js %}
+{% block end_js %}
 	<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-	{% endblock %}
+{% endblock %}
