working carousel for popular cards

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -92,6 +92,10 @@ a:hover{
     max-height: 270px;
 }
 
+.carousel-card{
+    
+}
+
 .card-image-hidden{
     max-height: 270px;
     position: absolute;
