--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -2,18 +2,6 @@
 {% load static from staticfiles %}
 {% block content %}
 
-<!--This displays any messages such as "you have been logged out" etc.-->
-<div class="row">
-	{% if messages %}
-	<div>
-		{% for message in messages %}
-		<h1>{{message}}</h1>
-		{% endfor %}
-	</div>
-	{% endif %}
-</div>
-<!--End messages section-->
-
 <!-- Carousel -->
 <div class="row">
 	<div id="carouselIndicators" class="carousel slide col-sm-12" data-ride="carousel">
@@ -45,61 +33,38 @@
 			</div>
 			<!--End of carousel-->
 			<div class="container">
-				<!--Website Header-->
-				<div class="row border-bottom">
-					<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
-						<h3 class="display-4">Magic Market Update</h3>
-						<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
-							rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-							adipisci pariatur alias officia numquam. Consectetur, aspernatur?
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-							pariatur alias officia numquam. Consectetur, aspernatur?
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-							pariatur alias officia numquam. Consectetur, aspernatur?</p>
-					</div>
-				</div>
-				<!---->
-				<div class="row justify-content-around pt-3">
+				<div class="row pt-3">
 					<!--Popular cards sorted by views-->
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="pb-3 mb-4 center">
-							Popular Listings
-						</h1>
 
-						{% for card in cards|dictsortreversed:"listing_views" %}
-						<a href="{% url 'card_detail' card.id %}">
-							<div class="card-minimalistic">
-								<img class="card-image" src="/media/{{ card.image }}">
-								<p>{{ card.card_title }}</p>
-								<p>£{{ card.card_price }}</p>
+					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							{% for card in cards|dictsortreversed:"listing_views" %}
+                                {% if forloop.counter == 1 %}
+							    <div class="carousel-item active">
+								    <img class="d-block w-100 carousel-card" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                                </div>
+                                {% else %}
+                                <div class="carousel-item">
+								    <img class="d-block w-100 carousel-card" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+                                </div>
+                                {% endif %}
+							{% endfor %}
 							</div>
-						</a>
-						{% endfor %}
+							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+						<!--End of popular cards sections-->
 					</div>
-					<!--End of popular cards sections-->
-
-					<!--Latest listings section-->
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="pb-3 mb-4 center">
-							Recent Listings
-						</h1>
-						{% for card in cards|dictsortreversed:"listing_created_date"%}
-
-						<a href="{% url 'card_detail' card.id %}">
-							<div class="card-minimalistic">
-								<img class="card-image" src="/media/{{ card.image }}">
-								<p>{{ card.card_title }}</p>
-								<p>£{{ card.card_price }}</p>
-							</div>
-						</a>
-						{% endfor %}
-					</div>
-					<!--End of FILLER SECTION-->
 				</div>
-			</div>
-			{% endblock %}
-			{% block end_js %}
-			<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-			{% endblock %}
+				{% endblock %}
+				{% block end_js %}
+				<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+				{% endblock %}
