--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -2,6 +2,18 @@
 {% load static from staticfiles %}
 {% block content %}
 
+<!--This displays any messages such as "you have been logged out" etc.-->
+<div class="row">
+	{% if messages %}
+	<div>
+		{% for message in messages %}
+		<h1>{{message}}</h1>
+		{% endfor %}
+	</div>
+	{% endif %}
+</div>
+<!--End messages section-->
+
 <!-- Carousel -->
 <div class="row">
 	<div id="carouselIndicators" class="carousel slide col-sm-12" data-ride="carousel">
@@ -33,22 +45,49 @@
 			</div>
 			<!--End of carousel-->
 			<div class="container">
-				<div class="row pt-3">
+				<!--Website Header-->
+				<div class="row border-bottom">
+					<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
+						<h3 class="display-4">Magic Market Update</h3>
+						<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
+							rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
+							adipisci pariatur alias officia numquam. Consectetur, aspernatur?
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+							pariatur alias officia numquam. Consectetur, aspernatur?
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+							pariatur alias officia numquam. Consectetur, aspernatur?</p>
+					</div>
+				</div>
+				<!---->
+				<div class="row justify-content-around pt-3">
 					<!--Popular cards sorted by views-->
-
-					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-						<div class="carousel-inner">
-							{% for card in cards|dictsortreversed:"listing_views" %}
-                                {% if forloop.counter == 1 %}
-							    <div class="carousel-item active">
-								    <img class="d-block w-100 carousel-card" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-                                </div>
-                                {% else %}
-                                <div class="carousel-item">
-								    <img class="d-block w-100 carousel-card" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-                                </div>
-                                {% endif %}
-							{% endfor %}
+					<div class="col-sm-12 col-md-12 col-lg-4">
+						<h1 class="center">Popular Cards!</h1>
+						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								{% for card in cards|dictsortreversed:"listing_views" %}
+								{% if forloop.counter == 1 %}
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% else %}
+								<div class="carousel-item">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
 							</div>
 							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
 								data-slide="prev">
@@ -61,10 +100,54 @@
 								<span class="sr-only">Next</span>
 							</a>
 						</div>
-						<!--End of popular cards sections-->
 					</div>
+					<!--End of popular cards sections-->
+
+					<!--Latest listings section-->
+
+
+					<div class="col-sm-12 col-md-12 col-lg-4">
+						<h1 class="center">Popular Cards!</h1>
+						<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								{% for card in cards|dictsortreversed:"listing_created_date"%}
+								{% if forloop.counter == 1 %}
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% else %}
+								<div class="carousel-item">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleControls1" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls1" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
+					</div>
+					<!--End of SECTION-->
 				</div>
-				{% endblock %}
-				{% block end_js %}
-				<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-				{% endblock %}
+			</div>
+			{% endblock %}
+			{% block end_js %}
+			<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+			{% endblock %}
