--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -64,39 +64,87 @@
 				<div class="row justify-content-around pt-3">
 					<!--Popular cards sorted by views-->
 					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="pb-3 mb-4 center">
-							Popular Listings
-						</h1>
-
-						{% for card in cards|dictsortreversed:"listing_views" %}
-						<a href="{% url 'card_detail' card.id %}">
-							<div class="card-minimalistic">
-								<img class="card-image" src="/media/{{ card.image }}">
-								<p>{{ card.card_title }}</p>
-								<p>£{{ card.card_price }}</p>
+						<h1 class="center">Popular Cards!</h1>
+						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								{% for card in cards|dictsortreversed:"listing_views" %}
+								{% if forloop.counter == 1 %}
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% else %}
+								<div class="carousel-item">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
 							</div>
-						</a>
-						{% endfor %}
+							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
 					</div>
 					<!--End of popular cards sections-->
 
 					<!--Latest listings section-->
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="pb-3 mb-4 center">
-							Recent Listings
-						</h1>
-						{% for card in cards|dictsortreversed:"listing_created_date"%}
 
-						<a href="{% url 'card_detail' card.id %}">
-							<div class="card-minimalistic">
-								<img class="card-image" src="/media/{{ card.image }}">
-								<p>{{ card.card_title }}</p>
-								<p>£{{ card.card_price }}</p>
+
+					<div class="col-sm-12 col-md-12 col-lg-4">
+						<h1 class="center">Most Recent</h1>
+						<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								{% for card in cards|dictsortreversed:"listing_created_date"%}
+								{% if forloop.counter == 1 %}
+								<div class="carousel-item active">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% else %}
+								<div class="carousel-item">
+									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+									<div class="carousel-caption-custom d-none d-md-block">
+										<h5>{{ card.card_title }}</h5>
+										<p>£{{ card.card_price }}</p>
+                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
+									</div>
+								</div>
+								{% endif %}
+								{% endfor %}
 							</div>
-						</a>
-						{% endfor %}
+							<a class="carousel-control-prev" href="#carouselExampleControls1" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleControls1" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+						</div>
 					</div>
-					<!--End of FILLER SECTION-->
+					<!--End of SECTION-->
 				</div>
 			</div>
 			{% endblock %}
