--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -89,12 +89,12 @@
 								{% endif %}
 								{% endfor %}
 							</div>
-							<a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+							<a class="carousel-control-prev custom-controls" href="#carouselExampleControls" role="button"
 								data-slide="prev">
 								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
 							</a>
-							<a class="carousel-control-next" href="#carouselExampleControls" role="button"
+							<a class="carousel-control-next custom-controls" href="#carouselExampleControls" role="button"
 								data-slide="next">
 								<span class="carousel-control-next-icon" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
@@ -132,12 +132,12 @@
 								{% endif %}
 								{% endfor %}
 							</div>
-							<a class="carousel-control-prev" href="#carouselExampleControls1" role="button"
+							<a class="carousel-control-prev custom-controls" href="#carouselExampleControls1" role="button"
 								data-slide="prev">
 								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
 							</a>
-							<a class="carousel-control-next" href="#carouselExampleControls1" role="button"
+							<a class="carousel-control-next custom-controls" href="#carouselExampleControls1" role="button"
 								data-slide="next">
 								<span class="carousel-control-next-icon" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
