--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -1,28 +1,51 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
 {% block content %}
 <div class="container">
 	<div class="row">
 		<h1 class="col-sm-12 pb-3 pt-3 center">{{ profile.username }}</h1>
 	</div>
 
-
 	<!--Popular cards sorted by views-->
 	<div class="col-sm-12 col-md-12 col-lg-4">
-		<h1 class="pb-3 mb-4 border-bottom">
-			{{ profile.username }}'s most popular cards!
-		</h1>
-		{% for card in cards|dictsortreversed:"listing_views" %}
-
-		<div class="card mb-4 shadow-sm">
-			<div class="card-header">
-				<i class="fas fa-image fa-lg pt-1"></i> {{ card.card_title }}
+		<h1 class="center">Popular Cards!</h1>
+		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				{% for card in cards|dictsortreversed:"listing_views" %}
+				{% if forloop.counter == 1 %}
+				<div class="carousel-item active">
+					<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+					<div class="carousel-caption-custom d-none d-md-block">
+						<h5>{{ card.card_title }}</h5>
+						<p>£{{ card.card_price }}</p>
+						<p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View
+								Card</a></p>
+					</div>
+				</div>
+				{% else %}
+				<div class="carousel-item">
+					<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+					<div class="carousel-caption-custom d-none d-md-block">
+						<h5>{{ card.card_title }}</h5>
+						<p>£{{ card.card_price }}</p>
+						<p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View
+								Card</a></p>
+					</div>
+				</div>
+				{% endif %}
+				{% endfor %}
 			</div>
-			<div class="card-body">
-				<p>{{ card.card_description|truncatewords:30 }}</p>
-			</div>
-			<p><a href="{% url 'card_detail' card.id %}" class="btn btn-default">Read more</a></p>
+			<a class="carousel-control-prev custom-controls" href="#carouselExampleControls" role="button"
+				data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next custom-controls" href="#carouselExampleControls" role="button"
+				data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
 		</div>
-		{% endfor %}
 	</div>
 	<!--End of popular cards sections-->
 
@@ -44,32 +67,61 @@
 
 
 	<!--List of cards for the specific vendor-->
-	{% for card in cards %}
-	<div class="row pb-3">
-		<div class="col-sm-12 col-md-2">{{ card.card_title }}</div>
-		<div class="col-sm-12 col-md-2">{{ card.card_condition }}</div>
-		<div class="col-sm-12 col-md-1">£{{ card.card_price }}</div>
-		<div class="col-sm-12 col-md-2"><a href="{% url 'card_detail' card.id %}" class="button-effect">View Listing</a>
-		</div>
 
-		{% if user.is_authenticated %}
-		<div class="col-sm-12 col-md-2 negative-top">
-			<form method="post" action="{% url 'add_to_cart' card.id %}">
-				{% csrf_token %}
-				<div class="input-group">
-					<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
-					<span class="input-group-btn">
-            <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
-        </span>
-				</div>
-			</form>
-		</div>
-		{% endif %}
-
-
-
-	</div>
-	{% endfor %}
+	<table class="table table-hover">
+		<thead class="thead-dark pb-2 center">
+			<tr>
+				<th scope="col"></th>
+				<th scope="col">Card</th>
+				<th scope="col">Vendor Name</th>
+				<th scope="col">Condition</th>
+				<th scope="col">Price</th>
+				<th scope="col"></th>
+				{% if user.is_authenticated %}
+				<th scope="col"></th>
+				{% endif %}
+			</tr>
+		</thead>
+		<tbody>
+			{% for card in cards %}
+			<tr class="center">
+				<td>
+					<div onmouseenter="imageToggleShow({{ card.id }})" onmouseleave="imageToggleHide({{ card.id }})">
+						<img class="camera-icon" src="{% static 'img/camera_icon.png' %}" alt="Camera Icon">
+		                </div>
+						{% if card.image %}
+						<img class="card-image-hidden" id="{{card.id}}" src="/media/{{ card.image }}">
+                        {% endif %}
+                    </td>
+				<td>{{ card.card_title }}</td>
+				<td><a class="underline-link" href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
+				</td>
+				<td>{{ card.card_condition }}</td>
+				<td>£{{ card.card_price }}</td>
+				<td><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak">View Listing</a></td>
+				{% if user.is_authenticated %}
+				<td>
+					<div>
+						<form method="post" action="{% url 'add_to_cart' card.id %}">
+							{% csrf_token %}
+							<div class="input-group">
+								<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
+								<span class="input-group-btn">
+                                    <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
+                                </span>
+							</div>
+						</form>
+					</div>
+				</td>
+				{% endif %}
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 	<!--End of list of cards-->
 </div>
+{% endblock %}
+
+{% block end_js %}
+<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
 {% endblock %}
