--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -13,141 +13,122 @@
 	{% endif %}
 </div>
 <!--End messages section-->
-
-<!-- Carousel -->
-<div class="row">
-	<div id="carouselIndicators" class="carousel slide col-sm-12" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-			<li data-target="#carouselIndicators" data-slide-to="1"></li>
-			<li data-target="#carouselIndicators" data-slide-to="2"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img class="d-block w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="First slide">
-            </div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="{% static 'img/ikoria_banner_img1.jpg' %}" alt="Second slide">
-            </div>
+<!--Main Page Background Image-->
+<div class="banner-parent">
+	<img class=" w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="banner-image">
+	<div class="banner-child">
+		<h1>Latest Ikoria Product Now Available!</h1>
+	</div>
+</div>
+<!--End of background image-->
+<div class="container">
+	<!--Website Header-->
+	<div class="row border-bottom">
+		<div class="px-3 py-3 pt-md-4 pb-md-6 text-center">
+			<h3 class="display-4">Magic Market Update</h3>
+			<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
+				rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
+				adipisci pariatur alias officia numquam. Consectetur, aspernatur?
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+				accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+				pariatur alias officia numquam. Consectetur, aspernatur?
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
+				accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
+				pariatur alias officia numquam. Consectetur, aspernatur?</p>
+		</div>
+	</div>
+	<!---->
+	<div class="row justify-content-around pt-3">
+		<!--Popular cards sorted by views-->
+		<div class="col-sm-12 col-md-12 col-lg-4">
+			<h1 class="center">Popular Cards!</h1>
+			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					{% for card in cards|dictsortreversed:"listing_views" %}
+					{% if forloop.counter == 1 %}
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+						<div class="carousel-caption-custom d-none d-md-block">
+							<h5>{{ card.card_title }}</h5>
+							<p>£{{ card.card_price }}</p>
+							<p><a href="{% url 'card_detail' card.id %}"
+									class="button-effect nobreak margin-center">View Card</a></p>
+						</div>
+					</div>
+					{% else %}
 					<div class="carousel-item">
-						<img class="d-block w-100" src="{% static 'img/ikoria_banner_img2.jpg' %}" alt="Third slide">
-            </div>
-					</div>
-					<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</div>
-			<!--End of carousel-->
-			<div class="container">
-				<!--Website Header-->
-				<div class="row border-bottom">
-					<div class="px-3 py-3 pt-md-4 pb-md-6 mx-auto text-center">
-						<h3 class="display-4">Magic Market Update</h3>
-						<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto
-							rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-							adipisci pariatur alias officia numquam. Consectetur, aspernatur?
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-							pariatur alias officia numquam. Consectetur, aspernatur?
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-							accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-							pariatur alias officia numquam. Consectetur, aspernatur?</p>
-					</div>
-				</div>
-				<!---->
-				<div class="row justify-content-around pt-3">
-					<!--Popular cards sorted by views-->
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="center">Popular Cards!</h1>
-						<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-								{% for card in cards|dictsortreversed:"listing_views" %}
-								{% if forloop.counter == 1 %}
-								<div class="carousel-item active">
-									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-									<div class="carousel-caption-custom d-none d-md-block">
-										<h5>{{ card.card_title }}</h5>
-										<p>£{{ card.card_price }}</p>
-                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
-									</div>
-								</div>
-								{% else %}
-								<div class="carousel-item">
-									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-									<div class="carousel-caption-custom d-none d-md-block">
-										<h5>{{ card.card_title }}</h5>
-										<p>£{{ card.card_price }}</p>
-                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
-									</div>
-								</div>
-								{% endif %}
-								{% endfor %}
-							</div>
-							<a class="carousel-control-prev custom-controls" href="#carouselExampleControls" role="button"
-								data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							</a>
-							<a class="carousel-control-next custom-controls" href="#carouselExampleControls" role="button"
-								data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							</a>
+						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+						<div class="carousel-caption-custom d-none d-md-block">
+							<h5>{{ card.card_title }}</h5>
+							<p>£{{ card.card_price }}</p>
+							<p><a href="{% url 'card_detail' card.id %}"
+									class="button-effect nobreak margin-center">View Card</a></p>
 						</div>
 					</div>
-					<!--End of popular cards sections-->
+					{% endif %}
+					{% endfor %}
+				</div>
+				<a class="carousel-control-prev custom-controls" href="#carouselExampleControls" role="button"
+					data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next custom-controls" href="#carouselExampleControls" role="button"
+					data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
+		</div>
+		<!--End of popular cards sections-->
 
-					<!--Latest listings section-->
+		<!--Latest listings section-->
 
 
-					<div class="col-sm-12 col-md-12 col-lg-4">
-						<h1 class="center">Most Recent</h1>
-						<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-								{% for card in cards|dictsortreversed:"listing_created_date"%}
-								{% if forloop.counter == 1 %}
-								<div class="carousel-item active">
-									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-									<div class="carousel-caption-custom d-none d-md-block">
-										<h5>{{ card.card_title }}</h5>
-										<p>£{{ card.card_price }}</p>
-                                        <p><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
-									</div>
-								</div>
-								{% else %}
-								<div class="carousel-item">
-									<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
-									<div class="carousel-caption-custom d-none d-md-block">
-										<h5>{{ card.card_title }}</h5>
-										<p>£{{ card.card_price }}</p>
-                                        <p ><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak margin-center">View Card</a></p>
-									</div>
-								</div>
-								{% endif %}
-								{% endfor %}
-							</div>
-							<a class="carousel-control-prev custom-controls" href="#carouselExampleControls1" role="button"
-								data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							</a>
-							<a class="carousel-control-next custom-controls" href="#carouselExampleControls1" role="button"
-								data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							</a>
+		<div class="col-sm-12 col-md-12 col-lg-4">
+			<h1 class="center">Most Recent</h1>
+			<div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+				<div class="carousel-inner">
+					{% for card in cards|dictsortreversed:"listing_created_date"%}
+					{% if forloop.counter == 1 %}
+					<div class="carousel-item active">
+						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+						<div class="carousel-caption-custom d-none d-md-block">
+							<h5>{{ card.card_title }}</h5>
+							<p>£{{ card.card_price }}</p>
+							<p><a href="{% url 'card_detail' card.id %}"
+									class="button-effect nobreak margin-center">View Card</a></p>
 						</div>
 					</div>
-					<!--End of SECTION-->
+					{% else %}
+					<div class="carousel-item">
+						<img class="d-block w-100" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+						<div class="carousel-caption-custom d-none d-md-block">
+							<h5>{{ card.card_title }}</h5>
+							<p>£{{ card.card_price }}</p>
+							<p><a href="{% url 'card_detail' card.id %}"
+									class="button-effect nobreak margin-center">View Card</a></p>
+						</div>
+					</div>
+					{% endif %}
+					{% endfor %}
 				</div>
+				<a class="carousel-control-prev custom-controls" href="#carouselExampleControls1" role="button"
+					data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next custom-controls" href="#carouselExampleControls1" role="button"
+					data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
-			{% endblock %}
-			{% block end_js %}
-			<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
-			{% endblock %}
+		</div>
+		<!--End of SECTION-->
+	</div>
+</div>
+{% endblock %}
+{% block end_js %}
+<script type="text/javascript" src="{% static 'js/custom.js' %}"></script>
+{% endblock %}
