--- a/cards/templates/addcards.html
+++ b/cards/templates/addcards.html
@@ -2,11 +2,19 @@
 {% load bootstrap_tags %}
 {% block content %}
 <div class="container">
-	<h1>New Listing</h1>
-	<form method="POST" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{ form | as_bootstrap }}
-		<button type="submit" class="btn btn-info">Save</button>
-	</form>
+	<div class="row">
+		<div class="text-center max-width pt-5 pb-5">
+			<h3>Add Cards</h3>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12 col-lg-6 margin-center">
+			<form method="POST" enctype="multipart/form-data">
+				{% csrf_token %}
+				{{ form | as_bootstrap }}
+				<button type="submit" class="btn btn-info">Save</button>
+			</form>
+		</div>
+	</div>
 </div>
 {% endblock %}
