--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -15,7 +15,7 @@
 <!--End messages section-->
 <!--Main Page Background Image-->
 <div class="banner-parent">
-	<img class=" w-100" src="{% static 'img/ikoria_banner_img.jpg' %}" alt="banner-image">
+	<img class="w-100" id="cover-image" src="{% static 'img/ikoria_banner_img3.jpg' %}" alt="banner-image">
 	<div class="banner-child">
 		<h1>Latest Ikoria Product Now Available!</h1>
 	</div>
