--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container small-body">
 	<h1>This is the login page</h1>
 	<form method="POST">
 		{% csrf_token %}
