--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
+<div class="container small-body">
 	<h1>This is the registration page</h1>
 	<p>If you already have an account, please <a href="{% url 'login' %}">log in here</a></p>
 
