--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,30 +1,46 @@
 {% extends 'base.html' %}
 {% load static from staticfiles %}
 {% block content %}
-<div class="container">
-	<div class="row row-flex">
-		{% for item in cart_items %}
-		<div class="caption">
-			<h3>{{ item.card.name }}</h3>
-			<p class="card-description">{{ item.card.description }}</p>
-			<p>{{ item.card.price }}</p>
-			<p>
-				<form class="form-inline" method="POST" action="{% url 'adjust_cart' item.id %}">
-					{% csrf_token %}
-					<div class="form-group">
-						<div class="input-group-addon">Amount:</div>
-						<div class="input-group-addon">{{ item.quantity }}</div>
-					</div>
-					<button type="submit">Amend</button>
-				</form>
-			</p>
-		</div>
-		{% endfor %}
-	</div>
+<div class="container small-body pt-4">
+	<!--Page Header-->
 	<div class="row">
-		<p>Total:</p>
-		<p>£{{ total }}</p>
-		<a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
+		<div class="text-center max-width pt-5 pb-5">
+			<h3>Shopping Cart</h3>
+		</div>
+	</div>
+	<!---->
+	<div class="row">
+		<div class="col-sm-12 col-md-8">
+			<div class="row justify-content-center pb-2">
+				<h4>Cart Summary</h4>
+			</div>
+			{% for item in cart_items %}
+			<div class="row justify-content-center">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">{{ item.quantity }}x {{ item.card.card_title }}</h5>
+						<p class="card-text">Price: £{{ item.card.card_price }}</p>
+						<p class="card-text">Vendor: {{ item.card.user.username }}</p>
+						<p>
+							<form class="form-inline" method="POST" action="{% url 'adjust_cart' item.id %}">
+								{% csrf_token %}
+								<button class="btn btn-dark" type="submit">Edit</button>
+							</form>
+						</p>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+
+		</div>
+		<div class="col-sm-12 col-md-4">
+			<div class="row">
+				<p>Total: £{{ total }}</p>
+			</div>
+            <div class="row">	
+				<a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
+			</div>
+		</div>
 	</div>
 </div>
 {% endblock %}
